--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>dry</artifactId>
   <packaging>hpi</packaging>
   <name>Hudson Duplicate Code Scanner Plug-in</name>
-  <version>2.0</version>
+  <version>2.1-SNAPSHOT</version>
   <url>http://wiki.hudson-ci.org/display/HUDSON/DRY+Plugin</url>
   <description>This plug-in generates reports of duplicated code in a project.</description>
 
@@ -156,10 +156,4 @@
       </plugin>
     </plugins>
   </reporting>
-
-  <scm>
-    <connection>scm:svn:https://guest@svn.dev.java.net/svn/hudson/tags/dry-2.0</connection>
-    <developerConnection>scm:svn:https://svn.dev.java.net/svn/hudson/tags/dry-2.0</developerConnection>
-    <url>https://hudson.dev.java.net/source/browse/hudson/tags/dry-2.0</url>
-  </scm>
 </project>
