--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>dry</artifactId>
   <packaging>hpi</packaging>
   <name>Duplicate Code Scanner Plug-in</name>
-  <version>2.12</version>
+  <version>2.13-SNAPSHOT</version>
   <url>http://wiki.hudson-ci.org/display/HUDSON/DRY+Plugin</url>
   <description>This plug-in generates reports of duplicated code in a project.</description>
 
@@ -47,9 +47,9 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:https://guest@svn.java.net/svn/hudson~svn/tags/dry-2.12</connection>
-    <developerConnection>scm:svn:https://svn.java.net/svn/hudson~svn/tags/dry-2.12</developerConnection>
-    <url>http://fisheye.hudson-ci.org/browse/Hudson/tags/dry-2.12</url>
+    <connection>scm:svn:https://guest@svn.java.net/svn/hudson~svn/trunk/hudson/plugins/dry</connection>
+    <developerConnection>scm:svn:https://svn.java.net/svn/hudson~svn/trunk/hudson/plugins/dry</developerConnection>
+    <url>http://fisheye.hudson-ci.org/browse/Hudson/trunk/hudson/plugins/dry</url>
   </scm>
 
   <repositories>
