--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <packaging>hpi</packaging>
   <name>Duplicate Code Scanner Plug-in</name>
   <version>2.13-SNAPSHOT</version>
-  <url>http://wiki.hudson-ci.org/display/HUDSON/DRY+Plugin</url>
+  <url>http://wiki.jenkins-ci.org/x/X4IuAg</url>
   <description>This plug-in generates reports of duplicated code in a project.</description>
 
   <licenses>
