--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-    <version>1.17</version>
+    <version>1.19-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>de.java2html</groupId>
