--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
   <dependencies>
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
-      <artifactId>analysis-core</artifactId>
-      <version>1.22-SNAPSHOT</version>
+      <artifactId>analysis-pom</artifactId>
+      <version>1.22</version>
     </dependency>
     <dependency>
       <groupId>de.java2html</groupId>
