--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>1.29</version>
+    <version>1.33</version>
     <relativePath>../analysis-pom/pom.xml</relativePath>
   </parent>
 
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-      <version>1.31</version>
+      <version>1.34-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>de.java2html</groupId>
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-test</artifactId>
-      <version>1.6</version>
+      <version>1.7-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
