--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-test</artifactId>
-      <version>1.7</version>
+      <version>1.8-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
