--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-      <version>1.40-SNAPSHOT</version>
+      <version>1.40</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
