--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-digester3</artifactId>
       <version>3.2</version>
-      <classifier>with-deps</classifier>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
       <groupId>de.java2html</groupId>
