[JENKINS-30103] Tests have been reviewed

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
     </license>
     <license>
       <name>LGPL</name>
-      <comments>All icons are made by Carlitus (Carles Carbonell Bernado) and are under the LGPL.</comments>
+      <comments>All icons are made by Carlitus (Carles Carbonell
+        Bernado) and are under the LGPL.
+      </comments>
     </license>
   </licenses>
 
@@ -44,12 +46,12 @@
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <version>2.11.0</version>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>de.java2html</groupId>
       <artifactId>java2html</artifactId>
       <version>5.0</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-test</artifactId>
@@ -58,7 +60,19 @@
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-aggregator</artifactId>
+      <artifactId>workflow-job</artifactId>
+      <version>${workflow-jenkins-plugin.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-cps</artifactId>
+      <version>${workflow-jenkins-plugin.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-basic-steps</artifactId>
       <version>${workflow-jenkins-plugin.version}</version>
       <scope>test</scope>
     </dependency>
