--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-target
+target/
+work/
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
