--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <version>${workflow-jenkins-plugin.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-durable-task-step</artifactId>
+      <version>${workflow-jenkins-plugin.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <scm>
