--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
     <version>1.63</version>
+    <relativePath>../analysis-pom</relativePath>
   </parent>
 
   <artifactId>dry</artifactId>
@@ -15,7 +16,7 @@
   <description>This plug-in generates reports of duplicated code in a project.</description>
 
   <properties>
-    <workflow-jenkins-plugin.version>1.7</workflow-jenkins-plugin.version>
+    <workflow-jenkins-plugin.version>1.4</workflow-jenkins-plugin.version>
   </properties>
 
   <licenses>
@@ -40,25 +41,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-test</artifactId>
-      <version>1.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-job</artifactId>
-      <version>${workflow-jenkins-plugin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-cps</artifactId>
-      <version>${workflow-jenkins-plugin.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>
-      <artifactId>workflow-basic-steps</artifactId>
-      <version>${workflow-jenkins-plugin.version}</version>
+      <version>1.13-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
