Update of plug-in name.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <artifactId>dry</artifactId>
   <packaging>hpi</packaging>
-  <name>Duplicate Code Scanner Plug-in</name>
+  <name>DRY Plug-in</name>
   <version>2.43-SNAPSHOT</version>
   <url>http://wiki.jenkins-ci.org/x/X4IuAg</url>
   <description>This plug-in generates reports of duplicated code in a project.</description>
