--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-      <version>1.91-SNAPSHOT</version>
+      <version>1.92</version>
     </dependency>
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
