--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>dry</artifactId>
   <packaging>hpi</packaging>
   <name>DRY Plug-in</name>
-  <version>3.0.0-beta2-SNAPSHOT</version>
+  <version>3.0.0-beta2</version>
   <url>http://wiki.jenkins-ci.org/x/X4IuAg</url>
   <description>This plug-in generates reports of duplicated code in a project.</description>
 
@@ -46,7 +46,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>HEAD</tag>
+    <tag>dry-3.0.0-beta2</tag>
   </scm>
 
   <repositories>
